--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,19 +58,14 @@ jobs:
           
           docker-compose -f /kuber/haur/haur.yml down --remove-orphans
           docker-compose -f /kuber/haur/haur.yml up -d
-    - name: Generate Label
-      id: label_generate
+    - name: Add deployed tag to commit
       uses: actions/github-script@v5
       with:
         github-token: ${{secrets.PAT}}
         script: |
-          if (context.payload.pull_request) {
-            await github.rest.issues.addLabels({
-              owner: github.context.repo.owner,
-              repo: github.context.repo.repo,
-              issue_number: context.payload.pull_request.number,
-              labels: ['deployed']
-            });
-          } else {
-            console.log('Not a Pull Request event. Skipping label addition.');
-          }
+          await github.git.createRef({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: `refs/tags/deployed-${sha.substring(0,8)}`,
+            sha: context.sha
+          });
