--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,6 +66,6 @@ jobs:
           await github.rest.git.createRef({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            ref: `refs/tags/deployed-${sha.substring(0,8)}`,
+            ref: `refs/tags/deployed-${context.sha.substring(0,8)}`,
             sha: context.sha
           });
