--- a/deploy/haur.stage.yml
+++ b/deploy/haur.stage.yml
@@ -9,7 +9,8 @@ services:
     environment:
       #CONFIG SERVER
       CONFIG_SERVER_URL: http://config_server
-      SERVICE_NAME: haur_stage
+      SERVICE_NAME: haur
+      NAMESPACE: stage
       M_TOKEN: ${M_TOKEN}
       #END CONFIG SERVER
 
